--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lexapro"
+name = "illmatic-scheduling"
 version = "0.1.0"
 authors = ["Kaede Fujisaki <kaede@hexe.net>"]
 edition = "2018"
