--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "illmatic-scheduling"
 version = "0.1.0"
 authors = ["Kaede Fujisaki <kaede@hexe.net>"]
 edition = "2018"
+license = "AGPL-3.0-or-later"
+
+description = "Scheduling library avoiding to dirturb someone."
+repository = "https://github.com/ledyba/illmatic-scheduling"
+homepage = "https://github.com/ledyba/illmatic-scheduling"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
