--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ description = "Scheduling library avoiding to dirturb someone."
 repository = "https://github.com/ledyba/illmatic-scheduling"
 homepage = "https://github.com/ledyba/illmatic-scheduling"
 
+readme = "README.md"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
