--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ readme = "README.md"
 [dependencies]
 tokio = { version = "1.5.0", features = ["full"] }
 regex = "1.5.4"
-lazy_static = "1.4.0"
 futures = "0.3.15"
+once_cell = "1.8.0"
